<resources>
    <string name="app_name">5hid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="create_event">Create Event</string>
    <string name="create_event_title">Create Event</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="friends">Friends</string>
    <string name="help_account">To use this application, you must login first. For now you can login as testuser@test.com with password 5hidIsTheBestApp. All create requests must come from authenticated users, both the Leaderboard and Events should be visible to anonymous users, lurkers if you will.</string>
    <string name="help_fragments">There are 3 main fragments in this application, with a settings fragment as well. The fragments are the map fragment, the leaderboard fragment, and the friends fragment. The first two should display in the menu bar as icons while the Friends will display as text in the ellipses popover.</string>
    <string name="help_map">The Map fragment is used to show where you, your friends and the people around you are doing their business. There are 3 colors denoting different users and their events, the first is purple, this is you and your creation, the next is azure, this will show if your friend is the one marking their territory, the last is red, this is for any people not currently in your friend list, but still in your approximate area. You can also click on your friends\' icons to send them an email to start a challenge.</string>
    <string name="help_leaderboard">The next fragment is the Leaderboard, the leaderboard shows a tally of your competitive standing globally. At present, this is calculated by a simple count of Events for all time.</string>
    <string name="help_friends">The last fragment is the Friends fragment, which is a list of all users in the application that you can befriend, to gain better insight into where they drop logs. You can add and remove friends, the plus indicates they are not already in your friends list and you can add them, while the x indicates that they are in your friends list but can be removed. Currently, this relationship is an asymmetrical many-to-many, so you will need to contact your friends in real life to get them to add you back. There is also a star next to any contacts names that exist in your contact book, this allows you to easily identify users that may be of particular interest to friend.</string>
</resources>